--- a/Web_app/templates/modelQueries.html
+++ b/Web_app/templates/modelQueries.html
@@ -56,6 +56,20 @@
               <td>It doesn`t have an queryset</td>
               <td>{{ patient_nth_record_key.first_name }} {{ patient_nth_record_key.last_name }}</td>
             </tr>
+            
+             <tr>
+              <th scope="row">5</th>
+              <td> Calculate the Patients` average age </td>
+              <td>It doesn`t have an queryset</td>
+              <td>{{ patient_avg_age_key.average_age }}</td>
+            </tr>
+
+            <tr>
+              <th scope="row">6</th>
+              <td> Count of the patients </td>
+              <td>It doesn`t have an queryset</td>
+              <td>{{ patient_counts_key }}</td>
+            </tr>
           </tbody>
         </table>
 
