--- a/Web_app/templates/company/insurance_company.html
+++ b/Web_app/templates/company/insurance_company.html
@@ -1,26 +1,34 @@
 
 {% extends 'base.html' %}
-{% load static %}
 
 <head>
-	
+	<title>Insurance Company Data</title>
 </head>
 
 <body>
-
   <div class="container">
-    
+    <h3> Insurance Company Data </h3>
     {% block content %}
 
-    	<h1>Welcome To Health Inurance Claim project</h1>
+    {% for each_company in all_company_data_key %}
 
-      <img src="{% static 'index.jfif' %}" width="300px" height="200px">
+    <div class="card text-center">
+      <div class="card-header">
+        {{ each_company.insurancecompany_id }}    
+      </div>
+      <div class="card-body">
+        <h5 class="card-title">{{ each_company.insurancecompany_name }}</h5>
+        <p class="card-text">{{ each_company.company_detail }}</p>
+        <a href="#" class="btn btn-primary">View more</a>
+      </div>
+    </div>
+    {% endfor %}
     {% endblock %}
 
   </div> 
 
     <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS --> 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
