--- a/Web_app/templates/base.html
+++ b/Web_app/templates/base.html
@@ -12,8 +12,8 @@
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">-->
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
 
-
-    <title>HIC</title>
+    {% block title %}  {% endblock %}
+    
   </head>
   <body>
   
@@ -44,7 +44,7 @@
         <a class="nav-link text-dark" href="{% url 'allqueries' %}">Model Queries</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-dark" href="#">Staff</a>
+        <a class="nav-link text-dark" href="{% url 'claimdata' %}">Claim</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
