--- a/Web_app/templates/base.html
+++ b/Web_app/templates/base.html
@@ -46,6 +46,9 @@
       <li class="nav-item">
         <a class="nav-link text-dark" href="{% url 'claimdata' %}">Claim</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link text-dark" href="{% url 'get_contact' %}">Contact</a>
+      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
