--- a/Web_app/templates/base.html
+++ b/Web_app/templates/base.html
@@ -9,8 +9,11 @@
 
     <!-- Bootstrap CSS -->
 
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">-->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <!-- <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">-->
+
 
     {% block title %}  {% endblock %}
     
@@ -19,13 +22,14 @@
   
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <h1 id="site-name">
-      <a href="{% url 'admin:index' %}">
+      <a href="{% url 'index' %}">
           <img src="{% static 'logo.png' %}" height="40px" />
       </a>
       <a class="navbar-brand" href="{% url 'index' %}">HIC</a>
 
     </h1>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
@@ -35,20 +39,27 @@
         <a class="nav-link text-dark" href="{% url 'allhospitals' %}">Hospital</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-dark" href="{% url 'patients' %}">Patient</a>
-      </li>
-      <li class="nav-item">
         <a class="nav-link text-dark" href="{% url 'insurancecompany' %}">Insurance Companies</a>
-      </li>   
-      <li class="nav-item">
-        <a class="nav-link text-dark" href="{% url 'allqueries' %}">Model Queries</a>
-      </li>
       <li class="nav-item">
         <a class="nav-link text-dark" href="{% url 'claimdata' %}">Claim</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-dark" href="{% url 'get_contact' %}">Contact</a>
+        <a class="nav-link text-dark" href="{% url 'signup' %}">Signup</a>
       </li>
+
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Others
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="{% url 'patients' %}">Patient</a>
+          <a class="dropdown-item" href="{% url 'allqueries' %}">M-Queries</a>
+          <a class="dropdown-item" href="{% url 'get_contact' %}">Contact</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="{% url 'admin:index' %}">Admin</a>
+        </div>
+      </li>
+
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
@@ -76,9 +87,10 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
 
-    <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>-->
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        <!-- <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.bundle.js' %}"></script>-->
   </body>
 </html>
