--- a/Web_app/templates/index.html
+++ b/Web_app/templates/index.html
@@ -9,23 +9,26 @@
 </head>
 
 <body>
-
-  <div class="container">
     
+  <div class="container">
+
     {% block content %}
+    <div class="row">
+      <div class="col-sm-10">
+      	<p class="mt-3 led text-muted">Welcome To Health Inurance Claim project! </p>
+        <img src="{% static 'index.jfif' %}" class="img-fluid">
+      </div>
 
-    	<h1>Welcome To Health Inurance Claim project</h1>
-
-      <img src="{% static 'index.jfif' %}" width="300px" height="200px">
+      <div class="col-sm-2">
+        <h3 class="mt-3 led">Signup here!</h3>
+        <form class="bg-warning">
+          
+        </form>
+      </div>
+    </div>
     {% endblock %}
 
-  </div> 
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+  </div>
  
  </body>
  
