--- a/Web_app/templates/base.html
+++ b/Web_app/templates/base.html
@@ -40,13 +40,23 @@
       </li>
       <li class="nav-item">
         <a class="nav-link text-dark" href="{% url 'insurancecompany' %}">Insurance Companies</a>
-      <li class="nav-item">
-        <a class="nav-link text-dark" href="{% url 'claimdata' %}">Claim</a>
       </li>
+      {% if request.user.is_authenticated %}
+      <li class="nav-item">
+        <a class="nav-link text-dark" href="#">User({{request.user.username}})</a>
+      </li>
+      {% else %}
       <li class="nav-item">
         <a class="nav-link text-dark" href="{% url 'signup' %}">Signup</a>
       </li>
-
+      <li class="nav-item">
+        <a class="nav-link text-dark" href="{% url 'login' %}">Login</a>
+      </li>
+      {% endif %}
+      {% if request.user.is_authenticated %}
+      <li class="nav-item">
+        <a class="nav-link text-dark" href="{% url 'claimdata' %}">Claim</a>
+      </li>
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Others
@@ -59,7 +69,7 @@
           <a class="dropdown-item" href="{% url 'admin:index' %}">Admin</a>
         </div>
       </li>
-
+      {% endif %}
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
